eks-manifest-auditor/examples/bad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risky-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risky-api
  template:
    metadata:
      labels:
        app: risky-api
    spec:
      volumes:
        - name: host-data
          hostPath:
            path: /var/lib
      containers:
        - name: app
          image: nginx:latest
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            runAsUser: 0
            capabilities:
              add:
                - SYS_ADMIN
          volumeMounts:
            - name: host-data
              mountPath: /host
---
apiVersion: v1
kind: Service
metadata:
  name: risky-api
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: risky-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
