eks-manifest-auditor/examples/good-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-api
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stable-api
  template:
    metadata:
      labels:
        app: stable-api
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: public.ecr.aws/nginx/nginx:1.25.4
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 12
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: stable-api
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: stable-api
  ports:
    - port: 80
      targetPort: 8080
